# data-structures-exercises

./: .gitignore  README.md
c/fila_dinamica/: main.c
src/c/deck/: main.c  run.sh
src/c/pilha_dinamica/: main.c
src/c/pilha_vet/: main.c
src/cpp/lista2/: CMakeLists.txt  main.cpp  run.sh
src/cpp/lista2/arvoreBusca/: arvoreBusca.hpp
src/cpp/lista2/deck/: deck.cpp  deck.h  deck.hpp
src/cpp/lista2/deckInt/: deckInt.hpp
src/cpp/lista2/exercicios/: exercicios.cpp  exercicios.hpp
src/cpp/lista2/fila/: fila.hpp
src/cpp/lista2/fila2P/: fila2P.hpp
src/cpp/lista2/pilha/: pilha.hpp
src/cpp/lista2/pilha2Filas/: pilha2Filas.hpp
src/cpp/lista2/pilhaMin/: pilhaMin.hpp
src/cpp/lista3/: CMakeLists.txt  main.cpp
src/cpp/lista3/arvoreBusca/: arvoreBusca.cpp  arvoreBusca.hpp
src/cpp/lista3/arvores/: arvores.cpp  arvores.hpp
src/cpp/lista3/exercicios/: exercicios.cpp  exercicios.hpp
